--- a/app/globals.css
+++ b/app/globals.css
@@ -183,7 +183,7 @@ body {
 
     td,
     th {
-      border: 1px solid var(--gray-3);
+      border: 1px solid rgb(30, 29, 31);
       box-sizing: border-box;
       min-width: 1em;
       padding: 6px 8px;
@@ -196,13 +196,13 @@ body {
     }
 
     th {
-      background-color: var(--gray-1);
+      background-color: #c7c7c7;
       font-weight: bold;
       text-align: left;
     }
 
     .selectedCell:after {
-      background: var(--gray-2);
+      background: #e6e6e6;
       content: "";
       left: 0;
       right: 0;
@@ -214,7 +214,7 @@ body {
     }
 
     .column-resize-handle {
-      background-color: var(--purple);
+      background-color: var(--primary);
       bottom: -2px;
       pointer-events: none;
       position: absolute;
